--- a/templates/partials/totalfinder/plugin.xcconfig.erb
+++ b/templates/partials/totalfinder/plugin.xcconfig.erb
@@ -1,3 +1,18 @@
 ///
 /// Specific configuration for TotalFinder plugins
 ///
+
+<%= include("bundle") %>
+
+// plugins have different conventions for plist and pch files
+GCC_PREFIX_HEADER = <%= @target %>Plugin.pch
+INFOPLIST_FILE = Info.plist
+
+<% # Tabs plugin needs extra seach path to chromium sources
+$shared["USER_HEADER_SEARCH_PATHS"] << "$(SRCROOT)/chromium" if @project=="Tabs"
+%>
+
+// temporary workaround for too many warnings in chromium sources
+<% if @project=="Tabs" then %>
+GCC_WARN_64_TO_32_BIT_CONVERSION = NO
+<% end %>
