--- a/templates/binaryage.xcconfig.erb
+++ b/templates/binaryage.xcconfig.erb
@@ -1,15 +1,15 @@
-<% # prepare shared values %>
+// prepare shared values
 <%= include("partials/shared_begin") %>
 
-<% # all projects include common configuration %>
+// all projects include common configuration
 <%= include("partials/common") %>
 
-<% # add configuration specific values %>
+// add configuration specific values
 <%= include("partials/debug") if @configuration=="Debug" %>
 <%= include("partials/release") if @configuration=="Release" %>
 
-<% # product-related configurations %>
+// product-related configurations
 <%= include("partials/totalfinder/config") %>
 
-<% # this file must go last to generate shared values %>
+// this file must go last to generate shared values
 <%= include("partials/shared_end") %>
