updated shell config

--- a/templates/partials/totalfinder/shell.xcconfig.erb
+++ b/templates/partials/totalfinder/shell.xcconfig.erb
@@ -6,4 +6,4 @@ GCC_PREFIX_HEADER = TotalFinder.pch
 INFOPLIST_FILE = Info.plist
 PRODUCT_NAME = TotalFinder
 
-<% $shared["HEADER_SEARCH_PATHS"] << "$(SRCROOT)/../headers" if is_totalfinder_shell? %>
+<% $shared["HEADER_SEARCH_PATHS"] << "$(SRCROOT)/../headers" %>
