initial support for TotalTerminal projects

--- a/templates/binaryage.xcconfig.erb
+++ b/templates/binaryage.xcconfig.erb
@@ -10,6 +10,7 @@
 
 // product-related configurations
 <%= include("partials/totalfinder/config") %>
+<%= include("partials/totalterminal/config") %>
 
 // this file must go last to generate shared values
 <%= include("partials/shared_end") %>
