agent's info.plist moved

--- a/templates/partials/totalfinder/agent.xcconfig.erb
+++ b/templates/partials/totalfinder/agent.xcconfig.erb
@@ -2,6 +2,6 @@
 /// Specific configuration for TotalFinder agent
 ///
 
-INFOPLIST_FILE = Agent/Agent-Info.plist
+INFOPLIST_FILE = ../agent-resources/Agent-Info.plist
 GCC_PREFIX_HEADER = Agent/Agent-Prefix.pch
 PRODUCT_NAME = TotalFinder
