--- a/templates/partials/totalfinder/config.xcconfig.erb
+++ b/templates/partials/totalfinder/config.xcconfig.erb
@@ -65,8 +65,8 @@ end
 %>
 
 <%= include("base") if is_totalfinder? %>
-<%= include("debug") if is_totalfinder? and @configuration=="Debug" %>
-<%= include("release") if is_totalfinder? and @configuration=="Release" %>
+<%= include("debug") if is_totalfinder? and debug_configuration? %>
+<%= include("release") if is_totalfinder? and release_configuration? %>
 <%= include("plugin") if is_totalfinder_plugin? %>
 <%= include("framework") if is_totalfinder_framework? %>
 <%= include("shell") if is_totalfinder_shell? %>
