Prefixing   added refactoring command   added file generation commands     xcproject binary links with frameworks from Xcode => better than xcodeproj gem
Baproj
  centralized location to specify project-wide settings

--- a/templates/binaryage.xcconfig.erb
+++ b/templates/binaryage.xcconfig.erb
@@ -15,5 +15,8 @@
 <%= include("partials/totalfinder/config") %>
 <%= include("partials/totalterminal/config") %>
 
+// add prefixing related values -- needs to be at the end in order to override/modify any existing settings
+<%= include("prefixing/config") %> 
+
 // this file must go last to generate shared values
 <%= include("partials/shared_end") %>
