minor changes to header templates

--- a/templates/prefixing/BaClassPrefix.h.erb
+++ b/templates/prefixing/BaClassPrefix.h.erb
@@ -46,7 +46,7 @@
 # endif
 #endif
 
-/// Default prefix
+// Default prefix
 #if !defined(BA_CLASS_PREFIX)
 # define BA_CLASS_PREFIX <%= @project.prefix %>
 #endif
