update prefixing configuration templates

--- a/templates/prefixing/config.xcconfig.erb
+++ b/templates/prefixing/config.xcconfig.erb
@@ -2,7 +2,7 @@
 <%
 
 def skip_prefixing_config?
-  @precompiled_header.nil? || @baproj.nil? || @project_dir.nil?
+  @precompiled_header.nil?
 end
 
 %>
