--- a/templates/binaryage.xcconfig.erb
+++ b/templates/binaryage.xcconfig.erb
@@ -16,7 +16,7 @@
 <%= include("partials/totalterminal/config") %>
 
 // add prefixing related values -- needs to be at the end in order to override/modify any existing settings
-<%= include("prefixing/config") %> 
+<%= "" or include("prefixing/config") %> // temporarily disabled by darwin, would be nice if this could be optional
 
 // this file must go last to generate shared values
 <%= include("partials/shared_end") %>
