ah, we have add new plugins into a list

--- a/templates/partials/totalfinder/config.xcconfig.erb
+++ b/templates/partials/totalfinder/config.xcconfig.erb
@@ -16,6 +16,7 @@ $plugins = [
   'NoDesktopDots',
   'SystemFiles',
   'Template',
+  'Labels',
   'Tests'
 ]
 $frameworks = %w(BAKit TotalKit Sparkle)
