--- a/templates/prefixing/base.xcconfig.erb
+++ b/templates/prefixing/base.xcconfig.erb
@@ -4,4 +4,4 @@
 
 GCC_PRECOMPILE_PREFIX_HEADER = YES
 GCC_PREFIX_HEADER = <%= @precompiled_header %>
-GCC_INCREASE_PRECOMPILED_HEADER_SHARING = YES
+GCC_INCREASE_PRECOMPILED_HEADER_SHARING = NO
