--- a/templates/partials/debug.xcconfig.erb
+++ b/templates/partials/debug.xcconfig.erb
@@ -17,7 +17,7 @@ LLVM_LTO = NO
 ONLY_ACTIVE_ARCH = YES
 
 // These settings catch some errors in integer arithmetic and some instances of undefined behavior
-<% $shared["OTHER_CFLAGS"] << "-ftrapv" << "-fsanitize=undefined-trap" << "-fsanitize-undefined-trap-on-error" %>
+<% $shared["OTHER_CPLUSPLUSFLAGS"] << "-ftrapv" << "-fsanitize=undefined-trap" << "-fsanitize-undefined-trap-on-error" %>
 
 // Whether to strip debugging symbols when copying the built product to its final installation location
 STRIP_INSTALLED_PRODUCT = NO
