--- a/templates/partials/totalfinder/osax.xcconfig.erb
+++ b/templates/partials/totalfinder/osax.xcconfig.erb
@@ -1,1 +1,3 @@
-WRAPPER_EXTENSION = osax
+/// we don't want OSAX subsystem to treat our intermediate build folder as installed osax in the system
+/// they use SpotLight or some similar search mechanism to look for all .osax in the system
+WRAPPER_EXTENSION = xaso
