--- a/templates/helpers/configurations.xcconfig.erb
+++ b/templates/helpers/configurations.xcconfig.erb
@@ -8,4 +8,8 @@ def release_configuration?
   @configuration=="Release"
 end
 
+def releaselogging_configuration?
+  @configuration=="ReleaseLogging"
+end
+
 %>
