--- a/templates/partials/release.xcconfig.erb
+++ b/templates/partials/release.xcconfig.erb
@@ -9,7 +9,8 @@ COPY_PHASE_STRIP = YES
 GCC_OPTIMIZATION_LEVEL = fast
 
 // Preproccessor definitions to apply to each file compiled
-<% $shared["GCC_PREPROCESSOR_DEFINITIONS"] << "NDEBUG=1" << "NS_BLOCK_ASSERTIONS=1" %>
+<% $shared["GCC_PREPROCESSOR_DEFINITIONS"] << "NDEBUG=1" %>
+<% $shared["GCC_PREPROCESSOR_DEFINITIONS"] << "NS_BLOCK_ASSERTIONS=1" %>
 
 // Whether to enable link-time optimizations (such as inlining across translation units)
 LLVM_LTO = YES
