change -Warc-abi to -Warc

--- a/templates/partials/common.xcconfig.erb
+++ b/templates/partials/common.xcconfig.erb
@@ -164,7 +164,7 @@ flags << "-Wunreachable-code"
 flags << "-Wunused-member-function"
 flags << "-Wuninitialized"
 flags << "-Wsuper-class-method-mismatch"
-flags << "-Warc-abi"
+flags << "-Warc"
 flags << "-Warc-retain-cycles"
 flags << "-Warc-unsafe-retained-assign"
 flags << "-Warc-non-pod-memaccess"
