GCC_PRECOMPILE_PREFIX_HEADER causing troubles in XCode 7.1
also bumped MACOSX_DEPLOYMENT_TARGET = 10.9 for TotalFinder

--- a/templates/partials/totalterminal/base.xcconfig.erb
+++ b/templates/partials/totalterminal/base.xcconfig.erb
@@ -24,7 +24,7 @@ DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 
 INFOPLIST_FILE = <%= @target %>-Info.plist
 
-GCC_PRECOMPILE_PREFIX_HEADER = YES
+GCC_PRECOMPILE_PREFIX_HEADER = NO
 GCC_PREFIX_HEADER = <%= @target %>-Prefix.pch
 GCC_INCREASE_PRECOMPILED_HEADER_SHARING = NO
 
