--- a/templates/partials/totalfinder/base.xcconfig.erb
+++ b/templates/partials/totalfinder/base.xcconfig.erb
@@ -2,8 +2,8 @@
 /// Base configuration for all TotalFinder projects
 ///
 
-// TotalFinder should run on 10.8+
-MACOSX_DEPLOYMENT_TARGET = 10.8
+// TotalFinder should run on 10.9+
+MACOSX_DEPLOYMENT_TARGET = 10.9
 SDKROOT = macosx
 
 // use modern C++ and stdlib
@@ -24,7 +24,7 @@ DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 
 INFOPLIST_FILE = <%= @target %>-Info.plist
 
-GCC_PRECOMPILE_PREFIX_HEADER = YES
+GCC_PRECOMPILE_PREFIX_HEADER = NO
 GCC_PREFIX_HEADER = <%= @target %>-Prefix.pch
 GCC_INCREASE_PRECOMPILED_HEADER_SHARING = NO
 
