--- a/templates/partials/totalterminal/config.xcconfig.erb
+++ b/templates/partials/totalterminal/config.xcconfig.erb
@@ -26,9 +26,9 @@ end
 
 %>
 
-<%= include("base") if is_totalterminal? %>
-<%= include("debug") if is_totalterminal? and debug_configuration? %>
-<%= include("release") if is_totalterminal? and release_configuration? %>
-<%= include("shell") if is_totalterminal_shell? %>
-<%= include("bundle") if is_bundle? %>
-<%= include("osax") if is_osax? %>
+<%= include('base') if is_totalterminal? %>
+<%= include('debug') if is_totalterminal? and debug_configuration? %>
+<%= include('release') if is_totalterminal? and release_configuration? %>
+<%= include('shell') if is_totalterminal_shell? %>
+<%= include('bundle') if is_bundle? %>
+<%= include('osax') if is_osax? %>
