--- a/templates/partials/totalfinder/base.xcconfig.erb
+++ b/templates/partials/totalfinder/base.xcconfig.erb
@@ -28,5 +28,5 @@ GCC_PRECOMPILE_PREFIX_HEADER = NO
 GCC_PREFIX_HEADER = <%= @target %>-Prefix.pch
 GCC_INCREASE_PRECOMPILED_HEADER_SHARING = NO
 
-<% $shared["WARNING_CFLAGS"] << "-Wthread-safety" << "-Wthread-safety-beta" %>
-<% $shared["OTHER_LDFLAGS"] << "-undefined dynamic_lookup" << "-headerpad_max_install_names" %>
+<% $shared['WARNING_CFLAGS'] << '-Wthread-safety' << '-Wthread-safety-beta' %>
+<% $shared['OTHER_LDFLAGS'] << '-undefined dynamic_lookup' << '-headerpad_max_install_names' %>
