--- a/templates/partials/totalterminal/shell.xcconfig.erb
+++ b/templates/partials/totalterminal/shell.xcconfig.erb
@@ -6,4 +6,4 @@ GCC_PREFIX_HEADER = shell/TotalTerminalShared.pch
 INFOPLIST_FILE = shell/Info.plist
 PRODUCT_NAME = TotalTerminal
 
-<% $shared["HEADER_SEARCH_PATHS"] << "$(SRCROOT)/headers" %>
+<% $shared['HEADER_SEARCH_PATHS'] << '$(SRCROOT)/headers' %>
