--- a/templates/partials/common.xcconfig.erb
+++ b/templates/partials/common.xcconfig.erb
@@ -151,6 +151,15 @@ RUN_CLANG_STATIC_ANALYZER = NO
 // Whether to run unit tests with every build
 TEST_AFTER_BUILD = NO
 
+// these warnings were recommended by Xcode 8.2
+CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES;
+CLANG_WARN_INFINITE_RECURSION = YES;
+CLANG_WARN_SUSPICIOUS_MOVE = YES;
+CLANG_WARN_UNREACHABLE_CODE = YES;
+ENABLE_STRICT_OBJC_MSGSEND = YES;
+//GCC_NO_COMMON_BLOCKS = YES;
+GCC_WARN_UNUSED_VARIABLE = YES;
+
 // Disable GCC compatibility warnings
 <% 
 
