modernize ruby code according to IntelliJ

--- a/templates/partials/totalfinder/config.xcconfig.erb
+++ b/templates/partials/totalfinder/config.xcconfig.erb
@@ -1,24 +1,7 @@
 // totalfinder-specific logic
 <%
 
-$plugins = [
-  'ColorfulSidebar',
-  'CopyPathMenu',
-  'DockProgressBar',
-  'FoldersOnTop',
-  'PublishBox',
-  'Tabs',
-  'TerminalLink',
-  'Visor',
-  'ColumnViewAutoWidth',
-  'CutAndPaste',
-  'FileBrowsing',
-  'NoDesktopDots',
-  'SystemFiles',
-  'Template',
-  'Labels',
-  'Tests'
-]
+$plugins = %w(ColorfulSidebar CopyPathMenu DockProgressBar FoldersOnTop PublishBox Tabs TerminalLink Visor ColumnViewAutoWidth CutAndPaste FileBrowsing NoDesktopDots SystemFiles Template Labels Tests)
 $frameworks = %w(BAKit TotalKit Sparkle)
 $helpers = %w(Shell OSAX Agent Uninstaller CrashWatcher)
 
