ENABLE_TESTABILITY = NO

--- a/templates/partials/totalfinder/base.xcconfig.erb
+++ b/templates/partials/totalfinder/base.xcconfig.erb
@@ -10,6 +10,7 @@ SDKROOT = macosx
 CLANG_CXX_LIBRARY = libc++
 CLANG_CXX_LANGUAGE_STANDARD = c++0x
 CLANG_ENABLE_MODULES = YES
+ENABLE_TESTABILITY = NO // this would expose some internal symbols
 
 // some exotic warnings we want enabled (suggested by xcodeconf upgrade wizard)
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES;
@@ -31,7 +32,6 @@ GCC_WARN_UNUSED_FUNCTION = YES;
 GCC_WARN_UNUSED_VARIABLE = YES;
 
 ENABLE_STRICT_OBJC_MSGSEND = YES;
-ENABLE_TESTABILITY = YES;
 
 COMBINE_HIDPI_IMAGES = YES
 
