--- a/templates/partials/common.xcconfig.erb
+++ b/templates/partials/common.xcconfig.erb
@@ -27,9 +27,6 @@ CLANG_WARN_CONSTANT_CONVERSION = YES
 // Whether to warn when overriding deprecated methods
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 
-// Warn about direct accesses to the Objective-C 'isa' pointer instead of using a runtime API.
-CLANG_WARN_DIRECT_OBJC_ISA_USAGE = YES
-
 // Warn about declaring the same method more than once within the same @interface.
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
 
@@ -47,11 +44,17 @@ CLANG_WARN_ENUM_CONVERSION = YES
 // For example, this can catch issues when one incorrectly intermixes using NSNumbers and raw integers.
 CLANG_WARN_INT_CONVERSION = YES
 
-// Don't warn about repeatedly using a weak reference without assigning the weak reference to a strong reference. Too many false positives.
-CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = NO
+// Don't warn about repeatedly using a weak reference without assigning the weak reference to a strong reference.
+// Too many false positives.
+CLANG_WARN_OBJC_REPEATED_USE_OF_WEAK = YES
 
-// Warn about classes that unintentionally do not subclass a root class (such as NSObject).
-CLANG_WARN_OBJC_ROOT_CLASS = YES
+// Warn about implicit retains of 'self' within blocks, which can create a retain-cycle.
+CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
+
+// Warn about implicit ownership types on Objective-C object references as out parameters.
+// For example, declaring a parameter with type 'NSObject**' will produce a warning because the compiler will assume that
+// the out parameter's ownership type is '__autoreleasing'.
+CLANG_WARN_OBJC_EXPLICIT_OWNERSHIP_TYPE = YES
 
 // Whether to warn on suspicious implicit conversions
 //CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
@@ -65,19 +68,8 @@ DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 // Which C variant to use
 GCC_C_LANGUAGE_STANDARD = gnu99
 
-// Whether to enable exceptions for Objective-C
-GCC_ENABLE_OBJC_EXCEPTIONS = YES
-
-// Whether to generate debugging symbols
-GCC_GENERATE_DEBUGGING_SYMBOLS = YES
-
 // Whether to precompile the prefix header (if one is specified)
 GCC_PRECOMPILE_PREFIX_HEADER = YES
-
-// Whether to enable strict aliasing, meaning that two pointers of different
-// types (other than void * or any id type) cannot point to the same memory
-// location
-GCC_STRICT_ALIASING = YES
 
 // Whether static variables are thread-safe by default
 GCC_THREADSAFE_STATICS = NO
@@ -92,24 +84,9 @@ GCC_WARN_64_TO_32_BIT_CONVERSION = YES
 // designated initializers aren't used)
 GCC_WARN_ABOUT_MISSING_FIELD_INITIALIZERS = YES
 
-// Whether to warn about missing function prototypes
-GCC_WARN_ABOUT_MISSING_PROTOTYPES = NO
-
-// Whether to warn about implicit conversions in the signedness of the type
-// a pointer is pointing to (e.g., 'int *' getting converted to 'unsigned int *')
-GCC_WARN_ABOUT_POINTER_SIGNEDNESS = YES
-
 // Whether to warn when the value returned from a function/method/block does not
 // match its return type
 GCC_WARN_ABOUT_RETURN_TYPE = YES
-
-// Whether to warn on a class not implementing all the required methods of
-// a protocol it declares conformance to
-GCC_WARN_ALLOW_INCOMPLETE_PROTOCOL = YES
-
-// Whether to warn when switching on an enum value, and all possibilities are
-// not accounted for
-GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 
 // Whether to warn about the use of four-character constants
 //GCC_WARN_FOUR_CHARACTER_CONSTANTS = YES
@@ -118,17 +95,9 @@ GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 // bracketed (e.g., array initializer syntax)
 GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED = YES
 
-// Whether to warn about missing braces or parentheses that make the meaning of
-// the code ambiguous
-GCC_WARN_MISSING_PARENTHESES = YES
-
 // Whether to warn about unsafe comparisons between values of different
 // signedness
 //GCC_WARN_SIGN_COMPARE = YES
-
-// Whether to warn about the arguments to printf-style functions not matching
-// the format specifiers
-GCC_WARN_TYPECHECK_CALLS_TO_PRINTF = YES
 
 // Warn if a "@selector(...)" expression referring to an undeclared selector is found
 //GCC_WARN_UNDECLARED_SELECTOR = YES
@@ -145,8 +114,9 @@ GCC_WARN_UNUSED_LABEL = YES
 // Whether to warn about variables that are never used
 GCC_WARN_UNUSED_VARIABLE = YES
 
-// Whether to run the static analyzer with every build
-RUN_CLANG_STATIC_ANALYZER = NO
+// Warn when a class declares an nonvirtual destructor that should probably be virtual, because it looks like the class
+// will be used polymorphically. This is only active for C++ or Objective-C++ sources.
+GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES
 
 // these warnings were recommended by Xcode 8.2
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES;
