--- a/templates/partials/totalfinder/base.xcconfig.erb
+++ b/templates/partials/totalfinder/base.xcconfig.erb
@@ -8,7 +8,7 @@ SDKROOT = macosx
 
 // use modern C++ and stdlib
 CLANG_CXX_LIBRARY = libc++
-CLANG_CXX_LANGUAGE_STANDARD = c++0x
+CLANG_CXX_LANGUAGE_STANDARD = c++17
 CLANG_ENABLE_MODULES = YES
 ENABLE_TESTABILITY = NO // this would expose some internal symbols
 
