effectively use GCC_INCREASE_PRECOMPILED_HEADER_SHARING for plugins

--- a/templates/binaryage.xcconfig.erb
+++ b/templates/binaryage.xcconfig.erb
@@ -1,5 +1,6 @@
 // include helper functions
 <%= include('helpers/configurations') %>
+<%= include('helpers/paths') %>
 
 // prepare shared values
 <%= include('partials/shared_begin') %>
