use consistent Info.plist naming

--- a/templates/partials/totalfinder/agent.xcconfig.erb
+++ b/templates/partials/totalfinder/agent.xcconfig.erb
@@ -2,5 +2,5 @@
 /// Specific configuration for TotalFinder agent
 ///
 
-INFOPLIST_FILE = ../agent-resources/Agent-Info.plist
+INFOPLIST_FILE = ../agent-resources/Info.plist
 PRODUCT_NAME = TotalFinder
