--- a/templates/partials/totalfinder/base.xcconfig.erb
+++ b/templates/partials/totalfinder/base.xcconfig.erb
@@ -37,7 +37,7 @@ COMBINE_HIDPI_IMAGES = YES
 
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
 
-INFOPLIST_FILE = <%= @target %>-Info.plist
+INFOPLIST_FILE = Info.plist
 
 GCC_PREFIX_HEADER = <%= @target %>.pch
 
