--- a/templates/partials/totalfinder/config.xcconfig.erb
+++ b/templates/partials/totalfinder/config.xcconfig.erb
@@ -30,13 +30,14 @@
       return false
     end
 
-    def needs_finder_headers?
-      return true if @target=="TotalKit"
-      $plugins.include? @target
+    def is_totalfinder_shell?
+      @target=="TotalFinder" and @project=="Shell"
     end
 
-    def is_totalfinder_shell?
-      @target=="TotalFinder.bundle" and @project=="Shell"
+    def needs_finder_headers?
+      return true if @target=="TotalKit"
+      return true if is_totalfinder_shell?
+      return true if is_totalfinder_plugin?
     end
 
     def is_bundle?
@@ -49,7 +50,7 @@
     end
 
     def is_osax?
-      (@project=="OSAX" or @project=="SIPOSAX") and @target == "TotalFinder"
+      (@project=="OSAX" and @target == "TotalFinder") or (@project=="SIPOSAX" and @target == "TotalFinderSIP")
     end
 
   %>
@@ -59,14 +60,12 @@
   <%= include('release') if is_totalfinder? and release_configuration? %>
   <%= include('plugin') if is_totalfinder_plugin? %>
   <%= include('framework') if is_totalfinder_framework? %>
-  <%= include('shell') if is_totalfinder_shell? %>
   <%= include('agent') if @target=='Agent' %>
   <%= include('uninstaller') if @target=='Uninstaller' %>
   <%= include('app') if is_app? %>
   <%= include('bundle') if is_bundle? %>
   <%= include('osax') if is_osax? %>
 
-  // here I use a small shortcut, TotalKit and all plugins are on same directory level relative to headers folder
   <% $shared['HEADER_SEARCH_PATHS'] << "#{totalfinder_path}/headers" if needs_finder_headers? %>
 
   <% unless is_totalfinder_framework? then %>
